A slightly modified patch from Geir Ove Grønmo "Calculation of promotions and price rules should support multi-level GROUP_ROLLUP" (https://issues.apache.org/jira/browse/OFBIZ-3440) - OFBIZ-3440
The calculation of product prices given promotion and price rules do not currently take multi-level GROUP_ROLLUP party relations into account.
The calculation of price rules consider two levels of GROUP_ROLLUP only, while the calculation of promotions take just a single level of GROUP_ROLLUP into account.
The attached patch will calculate price rules and promotions for GROUP_ROLLUPs for an arbitrary number of GROUP_ROLLUPs. This is essential in the situation where there are hierarchies of parties.


git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@922177 13f79535-47bb-0310-9956-ffa450edef68